fix blurred images in homepage component

--- a/client/src/utils/style.css
+++ b/client/src/utils/style.css
@@ -7,6 +7,12 @@
 .h-6{
     height: 6%;
 }
+.h-30{
+    height: 30%;
+}
+.h-70{
+    height: 70%;
+}
 .h-89{
     height: 88%;
 }
